style.scss
@use "reset";
@use "kit";

body {
    display: flex;
    flex-direction: column;
}

.navbar {
    background-color: #002863;
    flex-basis: 4rem;
    flex-shrink: 0;
    display: flex;
    justify-content: space-between;

    &__actions {
        display: flex;
    }
}

.dashboard {
    flex: 10;
    display: flex;
    overflow: hidden;
    background-color: #F9FCFF;
}

.main-area {
    flex: 8;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    gap: 2rem;
}

.products-grid {
    flex: 7;
    overflow-y: auto;
    display: grid;
    justify-content: center;
    grid-template-columns: repeat(auto-fit, minmax(5rem, 12rem));
    gap: 1.5rem;
    grid-auto-flow: row;
    grid-auto-rows: 18rem;
    padding: 2rem;

    &__item {
        background-color: white;
    }
}

.product-view {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 0.25rem;

    &__img {
        width: 100%;
        flex: 1;
        aspect-ratio: 1/1;
    }

    &__title {
        font-size: 1.25rem;
        text-align: center;
    }

    &__add-button {
        background-color: #D51C4A;
        padding: 0.75rem;
        font-weight: bold;
        color: white;
        border-radius: 6rem;
    }

    &:hover {
        border: solid 2px #D51C4A;
    }
}

.cart {
    background-color: red;
    flex: 3;

    display: flex;
    flex-direction: column;

    &__header {
        background-color: #d5e4ff;
        flex: 1;

        display: flex;
        justify-content: space-between;
        align-items: center;

        padding-inline: 0.75rem;
    }

    &__title {
        font-size: 2rem;
    }

    &__actions {
        display: flex;
    }

    &__action {
        text-align: center;
    }

    &__button {
        padding: 0.25rem;
        height: 3rem;
        aspect-ratio: 1;
        margin-inline: 1rem;
        background-color: white;
        border: solid 2px #D51C4A;

    }

    &__products {
        background-color: white;
        flex: 9;
        overflow: hidden;
    }

    &__summary {
        background-color: #d5e4ff;
        flex: 1;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    &__button-pay {
        background-color: #d51c4a;
        color: white;
        width: 16rem;
        height: 3rem;
        border-radius: 4rem;
        font-size: 1.5rem;
        font-weight: bold;
        text-align: center;
    }

    &__total-price {
        font-size: 1.75rem;
        font-weight: bold;
        text-align: center;
    }
}

.cart-list {
    height: 100%;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 2rem;
    overflow-y: scroll;


    &__item {
        border: solid 2px #D51C4A;
        display: flex;
        flex-wrap: wrap;
        padding: 0.5rem;
        gap: 1rem;

        position: relative;

        &:hover {

            .cart-list__action-remove {
                display: block;
            }

            .cart-list__actions {
                display: flex;
            }
        }
    }

    &__image {
        width: 100px;
        aspect-ratio: 1/1;
    }

    &__body {
        flex: 2;
        display: flex;
        flex-direction: column;
        position: relative;
        align-items: flex-start;
        justify-content: center;
    }

    &__name {
        font-size: 1rem;
    }

    &__price {
        font-size: 1.25rem;
        margin: auto 0;
        margin-left: auto;
        align-self: center;
        font-weight: bold;

    }

    &__quantity {
        height: 2.5rem;
        display: inline-block;
    }

    &__actions {
        background-color: white;
        // background-color: #d5e4ff;
        display: flex;
        justify-content: flex-end;
        align-items: center;
        position: absolute;
        bottom: 0;
        right: 0;
        width: 100%;
        display: none;
        padding: 0.2rem;

        gap: 0.25rem;

    }

    &__button {
        padding: 0.25rem;
        width: 1.1rem;
        height: 1.1rem;
        border: solid 2px red;
        text-align: center;
        border-radius: 4rem;
        background-color: white;
        vertical-align: middle;
        line-height: 1rem;
    }

    &__action-update {
        width: 4rem;
        border: none;
        background-color: #d51c4a;
        color: white;
        font-weight: bold;
    }

    &__input-amount {
        text-align: center;
        width: 4ch;
        height: 2rem;
        font-size: 0.75rem;
        font-weight: bold;
    }

    &__action-remove {
        position: absolute;
        top: 0.25rem;
        left: 0.25rem;
        display: none;
        line-height: 0.5;
    }

    @media (min-width: var(--screen-mobile)) {
        background-color: red;
    }

}

.category-list {
    width: 100%;
    flex: 2;
    display: flex;
    align-items: center;
    gap: 4rem;
    padding: 2rem;
    overflow-x: scroll;

    &__category {
        width: 8rem;
        display: flex;
        flex-direction: column;
        align-items: center;
        padding: 0.5rem;
    }

    &__image {
        width: 6rem;
        aspect-ratio: 1/1;
        border-radius: 8rem;
    }

    &__title {
        font-size: 1.5rem;
    }

    &__placeholder {
        width: 6rem;
        background-color: red;
    }
}

#navbar {
    left: 5px;
    top: 5px;
}


.navbar__profile img,
.navbar__orders img,
.navbar__cart img,
.navbar__namesearch img,
.navbar__idsearch img {
    width: 25px;
    height: 25px;
}

